fjord-compiler/test/errors/ReturnShared.fj
module errors.ReturnShared

returnShared : Int -> Int
returnShared x =
  x
